Styled login form.

--- a/src/Pbx/WebBundle/Resources/views/base.html.twig
+++ b/src/Pbx/WebBundle/Resources/views/base.html.twig
@@ -36,7 +36,7 @@
             <p>&copy; Aaron Bolanos 2013</p>
         </footer>
     {% endblock %}
-</div>
+</div><!-- /container -->
 {% block javascript_footer %}{% endblock %}
 <script src="{{ asset('js/jquery.min.js') }}"></script>
 <script src="{{ asset('js/bootstrap.min.js') }}"></script>
