--- a/src/Pbx/WebBundle/Resources/views/Web/home.html.twig
+++ b/src/Pbx/WebBundle/Resources/views/Web/home.html.twig
@@ -84,16 +84,8 @@
 </style>
 {% endblock %}
 
-{% block navbar %}
-    <div class="header">
-        <ul class="nav nav-pills pull-right">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">PBX Project</h3>
-    </div>
-{% endblock %}
+{% use 'PbxWebBundle:Web:navbar.html.twig' %}
+
 {% block content %}
     <div class="jumbotron">
         <h1>Jumbotron heading</h1>
